--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "mongodb": "^3.0.7",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-token": "^0.1.2",
+    "passport-token-google": "^0.1.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-google-login": "^3.2.1",
     "react-masonry-component": "^6.2.0",
     "react-scripts": "1.1.4"
   },
