update google login

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "apicache": "^1.2.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.7",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
