--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.0.7",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
+    "npm": "^6.0.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-token": "^0.1.2",
