--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "kd-nightlife",
   "version": "0.1.0",
-  "proxy": "http://localhost:3001",
   "private": true,
+  "homepage": "http://khoathanglong.github.io/fullstack-coffee-shop-discovery",
   "dependencies": {
     "apicache": "^1.2.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "gh-pages": "^1.1.0",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.7",
     "morgan": "^1.9.0",
@@ -29,6 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
